--- a/test_build/main_build.html
+++ b/test_build/main_build.html
@@ -86,6 +86,7 @@
             <div id="crosshair-wrapper" class="crosshair show-crosshair" style="position: absolute; top: 50%; left: 50%; height: 50px; width: 50px; transform: translateX(-50%); display:none">
                 <img src="./assets/crosshair_small.png" class="crosshair" style="width:100%; height:100%">
             </div>
+			<div id= "score"></div>
     </div>
 
 	<script src="three.js"></script>
@@ -169,6 +170,7 @@
         var moveTaper = 10;
         var groundLevel = 3;
         var groundSize = 100;
+		var score = 0;
 
 		var blocker = document.getElementById( 'blocker' );
         var instructions = document.getElementById( 'instructions' );
@@ -671,8 +673,16 @@
                                                     controls.getObject().position.z - enemyList[i].position.z);
 
 						enemyRBList[i].applyForce(distance);
+
+						if(distance.x - player.position.x < 1) {
+							controlsEnabled = false;
+						}
 					}
 				}
+
+				// Score
+				document.getElementById('score').innerHTML = "Score: " + score;
+				score++;
 
             }
 
@@ -684,8 +694,12 @@
 		function render() {
 
 			var deltaTime = clock.getDelta();
+			var score = 0;
 
-			updatePhysics( deltaTime );
+			if(controlsEnabled) {
+				updatePhysics( deltaTime );
+			}
+
 
 			renderer.render( scene, camera );
 
